--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-/* 
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -24,4 +25,4 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-} */
+} 
